syntax = "proto2";

message SensorVersionMessage {
    required uint32 dataType = 1;
    required bool result = 2;
    required uint32 master = 3;
    required uint32 second = 4;
    required uint32 step = 5;
}

message SensorStatusMessage {
    required uint32 actl_mode = 1;
    required uint32 rollcount = 2;
    required uint32 cfgStatus = 3;
}

message TargetStatusMessage {
    required uint32 noOfTarget = 1;
    required uint32 rollcount = 2;
}

message TargetInfoMessage {
    required uint32 index = 1;
    required float rcs = 2;
    required float range = 3;
    required uint32 azimuth = 4;
    required float vrel = 5;
    required uint32 rollCount = 6;
    required uint32 SNR = 7;
}

message SensorDataMessage {
    required SensorVersionMessage sensorVersion = 1;
    required SensorStatusMessage sensorStatus = 2;
    required TargetStatusMessage targetStatus = 3;
    required TargetInfoMessage targetInfo = 4;
    required uint32 tinfosize = 5;
}